# eqxformers

./: README.md  init_module_new_2_5b  init_module_new_2_5b_no_scan.txt  main.py  pyproject.toml  simple_roll.txt
benchmark/: init_time.py  train.py  train_hlo.txt
config/: benchmark.yaml  bert_mlm.yaml
design/: trainer.md
levanter/main/: benchmark.py
main/: benchmark.py
src/eqxformers/: __init__.py  benchmarking_utils.py  cli.py  config.py  data_utils.py  jax_utils.py  logging_utils.py  masking_utils.py  metrics_utils.py  modeling_utils.py  optimizer_utils.py  tracker_utils.py  training_utils.py  utils.py
src/eqxformers/data/: __init__.py  dataset_config.py  dataset_transforms.py  fast_mp.py  huggingface_datasets.py  huggingface_utils.py  masked_language_modeling.py  training.py
src/eqxformers/downloads/: __init__.py  hf_downloads.py
src/eqxformers/downloads/huggingface/: __init__.py
src/eqxformers/loss/: __init__.py  masked_language_modeling.py
src/eqxformers/models/: __init__.py
src/eqxformers/models/bert/: __init__.py  configuration_bert.py  modeling_bert.py  modeling_rngs.py
src/eqxformers/nn/: __init__.py  attention.py  dropout.py  embedding.py  linear.py  normalisation.py  rope.py  scan.py
src/eqxformers/optim/: adam.py
temp/: bert.py  fast_mp_iter_dataset.py  hf_ds.py  loaddata.py  rngs.py  temp_test_load.py  temp_test_mp.py  temp_test_thread_prefetch.py  test_fast_mp_iter.py  test_ff.py  test_ff_mp.py  test_ff_mp_old.py  test_fs_mlm.py  test_fs_mlm_mp.py  test_full_streaming.py  test_full_streaming_mp.py  test_full_streaming_mp_old.py  test_iter.py  test_rngs.py  test_scan.py  torchax_transformers.py  up.py  upload_data.py
